--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/View/BTAssetsCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/View/BTAssetsCell.xib
@@ -129,7 +129,7 @@
                                     <action selector="cellBtnActions:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GQG-jJ-TZ9"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eF3-73-vgm">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eF3-73-vgm">
                                 <rect key="frame" x="251" y="55.5" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="VGd-65-GQp"/>
