--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/BTProfileViewController.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/BTProfileViewController.xib
@@ -40,6 +40,11 @@
                                         <constraint firstAttribute="width" secondItem="zzt-nQ-KAO" secondAttribute="height" multiplier="1:1" id="xad-SA-PRi"/>
                                     </constraints>
                                     <state key="normal" image="icon_profileUser"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="32.5"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
                                     <connections>
                                         <action selector="userHeadClickAction:" destination="-1" eventType="touchUpInside" id="89m-mO-6Oa"/>
                                     </connections>
