--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/BTContributionRecordVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/BTContributionRecordVC.xib
@@ -15,6 +15,7 @@
                 <outlet property="destroyValue" destination="pXq-M4-XMw" id="je2-vN-Gmx"/>
                 <outlet property="earningView" destination="pnL-SO-hXv" id="th5-zQ-k5W"/>
                 <outlet property="earningsBtn" destination="fWQ-B4-m0U" id="9ND-CG-c5l"/>
+                <outlet property="subCoin" destination="a15-DP-22q" id="2Wt-Um-vGC"/>
                 <outlet property="tableView" destination="Hl6-gJ-dbj" id="V2T-gm-HeP"/>
                 <outlet property="totalEarning" destination="4Q9-A3-wQa" id="KVM-Oh-CIA"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -49,8 +50,8 @@
                             <color key="textColor" red="0.6588235294" green="0.52549019610000003" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1596.895878" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Q9-A3-wQa">
-                            <rect key="frame" x="72.5" y="52" width="92.5" height="13"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Q9-A3-wQa">
+                            <rect key="frame" x="72.5" y="52" width="31" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="13" id="qJo-UI-EYf"/>
                             </constraints>
@@ -58,21 +59,21 @@
                             <color key="textColor" red="0.6588235294" green="0.52549019610000003" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="自动销毁：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a15-DP-22q">
-                            <rect key="frame" x="13" y="84" width="66.5" height="13"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTK：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a15-DP-22q">
+                            <rect key="frame" x="13" y="84" width="46" height="13"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="13" id="hF3-gN-0aY"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                            <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <color key="textColor" red="0.6588235294117647" green="0.52549019607843139" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1596.895878" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pXq-M4-XMw">
-                            <rect key="frame" x="82.5" y="80" width="95" height="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pXq-M4-XMw">
+                            <rect key="frame" x="62" y="80" width="31" height="17"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="17" id="22o-Vw-6Qx"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.65490196078431373" green="0.52549019607843139" blue="0.34901960784313724" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
